Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/Product_Migration_Placeholder__c.object-meta.xml
<CustomObject>
    <label>Product Migration Placeholder</label>
    <nameField>
        <displayFormat>PMP-{000000}</displayFormat>
        <label>Product Migration Placeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Migration Placeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>