Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Accepted_onto_Hot_List__c.field-meta.xml
<CustomField>
    <fullName>Accepted_onto_Hot_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted onto Hot List</label>
    <type>Checkbox</type>
</CustomField>