Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Confidence_in_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Confidence_in_Conversion__c</fullName>
    <label>Forecasted Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expect to Win/Save</fullName>
            </value>
            <value>
                <fullName>Expect to Lose</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>