Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Contact_s_role_in_decision_making__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_role_in_decision_making__c</fullName>
    <label>Contact’s role in decision-making?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>