Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Contact_Spoken_with__c.field-meta.xml
<CustomField>
    <fullName>Contact_Spoken_with__c</fullName>
    <label>Contact Spoken with:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>