Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/CSAT_w_Client_collaboration__c.field-meta.xml
<CustomField>
    <fullName>CSAT_w_Client_collaboration__c</fullName>
    <inlineHelpText>Current C-SAT with solution for Client collaboration</inlineHelpText>
    <label>CSAT w/Client collaboration:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 – Not satisfied at all</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 – Neutral</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 – Very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>