Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/CSAT_w_KM_and_Retention__c.field-meta.xml
<CustomField>
    <fullName>CSAT_w_KM_and_Retention__c</fullName>
    <inlineHelpText>Current C-SAT with solution for Knowledge management and retention</inlineHelpText>
    <label>CSAT w/KM and Retention:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Not satisfied at all</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Neutral</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>