Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/CSAT_wEmail_Document_and_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CSAT_wEmail_Document_and_Compliance__c</fullName>
    <inlineHelpText>Current C-SAT with solution for Email and document archival and compliance capability</inlineHelpText>
    <label>CSAT w/Email, Document and Compliance:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Not satisfied at all</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Neutral</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>