Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Current_MSFT_365_adoption__c.field-meta.xml
<CustomField>
    <fullName>Current_MSFT_365_adoption__c</fullName>
    <label>Current MSFT 365 adoption?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Sharepoint as DMS</fullName>
            </value>
            <value>
                <fullName>Sharepoint for anything else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>