Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp &amp; TFG Customer</fullName>
            </value>
            <value>
                <fullName>Intapp &amp; Botany Customer</fullName>
            </value>
            <value>
                <fullName>TFG Only Customer</fullName>
            </value>
            <value>
                <fullName>Botany Only Customer</fullName>
            </value>
            <value>
                <fullName>Not a Customer</fullName>
            </value>
            <value>
                <fullName>Intapp Only</fullName>
            </value>
            <value>
                <fullName>On-premise customer only</fullName>
            </value>
            <value>
                <fullName>Already a cloud customer</fullName>
            </value>
            <value>
                <fullName>Gratis License Customer</fullName>
            </value>
            <value>
                <fullName>Bundle License Customer</fullName>
            </value>
            <value>
                <fullName>Flow License Customer</fullName>
            </value>
            <value>
                <fullName>Compliant Time customer</fullName>
            </value>
            <value>
                <fullName>Risk + Compliant Time customer</fullName>
            </value>
            <value>
                <fullName>Risk customer</fullName>
            </value>
            <value>
                <fullName>OnePlace for Marketing for customer</fullName>
            </value>
            <value>
                <fullName>Experience only customer</fullName>
            </value>
            <value>
                <fullName>Experience + Relationship customer</fullName>
            </value>
            <value>
                <fullName>iManage on-prem</fullName>
            </value>
            <value>
                <fullName>iManage cloud</fullName>
            </value>
            <value>
                <fullName>Time Cloud customer</fullName>
            </value>
            <value>
                <fullName>Rekoop customer</fullName>
            </value>
            <value>
                <fullName>TTM Customer</fullName>
            </value>
            <value>
                <fullName>Time Capture or Time Core customer</fullName>
            </value>
            <value>
                <fullName>Relationships only customer</fullName>
            </value>
            <value>
                <fullName>Walls Defense customer (signed)</fullName>
            </value>
            <value>
                <fullName>Walls Defense customer (unsigned)</fullName>
            </value>
            <value>
                <fullName>Walls customer</fullName>
            </value>
            <value>
                <fullName>Affected Customer</fullName>
            </value>
            <value>
                <fullName>Potentially Affected Customer</fullName>
            </value>
            <value>
                <fullName>OnePlace for Marketing customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>