Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Disposition_RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_RAG_Status__c</fullName>
    <label>Disposition (RAG Status)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>