Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Disposition_RAG_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Disposition_RAG_Status_formula__c</fullName>
    <formula>TEXT( Product_Customer__r.Project_RAG_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disposition (RAG Status)</label>
    <type>Text</type>
</CustomField>