Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Engagement_Style__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Style__c</fullName>
    <description>SC-000022</description>
    <label>Engagement Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personalized Outreach</fullName>
            </value>
            <value>
                <fullName>Product Email</fullName>
            </value>
            <value>
                <fullName>Product Email/CSM Follow-Up</fullName>
            </value>
            <value>
                <fullName>CSM Led</fullName>
                <isActive>false</isActive>
                <label>CSM Led</label>
            </value>
            <value>
                <fullName>Management Escalated</fullName>
                <isActive>false</isActive>
                <label>Management Escalated</label>
            </value>
            <value>
                <fullName>Time Practice Led</fullName>
                <isActive>false</isActive>
                <label>Time Practice Led</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>