Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Business Process Assessment</fullName>
            </value>
            <value>
                <fullName>Data Mapping Scheduled</fullName>
            </value>
            <value>
                <fullName>Data Mapping Performed</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Design &amp; Development</fullName>
            </value>
            <value>
                <fullName>Development Planning</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Upgrading</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>In development / testing</fullName>
            </value>
            <value>
                <fullName>HF not yet applied</fullName>
            </value>
            <value>
                <fullName>HF applied in Test</fullName>
            </value>
            <value>
                <fullName>HF applied in PROD</fullName>
            </value>
            <value>
                <fullName>In production</fullName>
            </value>
            <value>
                <fullName>Rule(s) updated in DEV</fullName>
            </value>
            <value>
                <fullName>Rule(s) updates in PROD</fullName>
            </value>
            <value>
                <fullName>Applied in UAT</fullName>
            </value>
            <value>
                <fullName>Applied in PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>