Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Initial_Reaction__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reaction__c</fullName>
    <label>Initial Reaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>