Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <label>Project Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>