Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Recurring_per_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Recurring_per_Lawyer__c</fullName>
    <formula>Recurring__c/Lawyers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring per Lawyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>