Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Red_List__c.field-meta.xml
<CustomField>
    <fullName>Red_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red_List</label>
    <type>Checkbox</type>
</CustomField>