Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Remaining_Hours_Dev__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours_Dev__c</fullName>
    <label>Remaining Hours (Dev)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>