Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment__c</fullName>
    <formula>Account__r.Simple_Territory__c</formula>
    <label>Sales Segment</label>
    <type>Text</type>
</CustomField>