Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>Services_Provider__c</fullName>
    <label>Services Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp</fullName>
            </value>
            <value>
                <fullName>Partner - Intapp paper</fullName>
            </value>
            <value>
                <fullName>Partner - Partner paper</fullName>
            </value>
            <value>
                <fullName>Partner - Intapp paper (blended)</fullName>
            </value>
            <value>
                <fullName>Self-Installing</fullName>
            </value>
            <value>
                <fullName>To be determined</fullName>
            </value>
            <value>
                <fullName>Intapp NPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>