Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Software_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Software_Contract_Signed__c</fullName>
    <label>Software Contract Signed</label>
    <type>Date</type>
</CustomField>