Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/T_CSM__c.field-meta.xml
<CustomField>
    <fullName>T_CSM__c</fullName>
    <formula>Product_Customer__r.CSM__r.FirstName&amp;&quot; &quot;&amp;Product_Customer__r.CSM__r.LastName</formula>
    <label>T-CS</label>
    <type>Text</type>
</CustomField>