Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <label>TAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>