Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>TFG_Relationship_Manager__c</fullName>
    <label>Relationship Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>