Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>TFG_Sales_Notes__c</fullName>
    <label>TFG Sales Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>