Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/TFG_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>TFG_Sales_Stage__c</fullName>
    <label>TFG Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10% - Create</fullName>
            </value>
            <value>
                <fullName>25% - Qualify</fullName>
            </value>
            <value>
                <fullName>50% - Develop</fullName>
            </value>
            <value>
                <fullName>75% - Prove</fullName>
            </value>
            <value>
                <fullName>90% - Negotiate</fullName>
            </value>
            <value>
                <fullName>100% - Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>