Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Understanding_of_why_Intapp_acquired_R__c.field-meta.xml
<CustomField>
    <fullName>Understanding_of_why_Intapp_acquired_R__c</fullName>
    <label>Understand reason for acquisition?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>