Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Botany.recordType-meta.xml
<RecordType>
    <fullName>Botany</fullName>
    <active>true</active>
    <label>Botany</label>
</RecordType>