Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Cloud_IDM_Migration.recordType-meta.xml
<RecordType>
    <fullName>Cloud_IDM_Migration</fullName>
    <active>true</active>
    <label>Cloud IDM Migration</label>
</RecordType>