Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Cloud_Readiness.recordType-meta.xml
<RecordType>
    <fullName>Cloud_Readiness</fullName>
    <active>true</active>
    <label>Cloud Readiness</label>
</RecordType>