Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Conflicts_Elasticsearch_Issue.recordType-meta.xml
<RecordType>
    <fullName>Conflicts_Elasticsearch_Issue</fullName>
    <active>true</active>
    <label>Conflicts Elasticsearch Issue</label>
</RecordType>