Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/CSM_Ops_Request.recordType-meta.xml
<RecordType>
    <fullName>CSM_Ops_Request</fullName>
    <active>true</active>
    <label>CSM Ops Request</label>
</RecordType>