Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Executive_Owner.recordType-meta.xml
<RecordType>
    <fullName>Executive_Owner</fullName>
    <active>true</active>
    <label>Executive Owner</label>
</RecordType>