Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Experience_Success.recordType-meta.xml
<RecordType>
    <fullName>Experience_Success</fullName>
    <active>true</active>
    <label>Experience Success</label>
</RecordType>