Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Flow_Success.recordType-meta.xml
<RecordType>
    <fullName>Flow_Success</fullName>
    <active>true</active>
    <label>Flow Success</label>
</RecordType>