Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Hot_List.recordType-meta.xml
<RecordType>
    <fullName>Hot_List</fullName>
    <active>true</active>
    <label>Hot List</label>
</RecordType>