Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/LegalKey.recordType-meta.xml
<RecordType>
    <fullName>LegalKey</fullName>
    <active>true</active>
    <label>TFG</label>
</RecordType>