Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/OP_SF_CRM_AOI_Defect.recordType-meta.xml
<RecordType>
    <fullName>OP_SF_CRM_AOI_Defect</fullName>
    <active>true</active>
    <label>OP SF CRM AOI Defect</label>
</RecordType>