Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Project_Raptor.recordType-meta.xml
<RecordType>
    <fullName>Project_Raptor</fullName>
    <active>true</active>
    <label>Project Raptor</label>
</RecordType>