Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Rekoop_Time_Cloud_Silverlight_EOS.recordType-meta.xml
<RecordType>
    <fullName>Rekoop_Time_Cloud_Silverlight_EOS</fullName>
    <active>true</active>
    <label>Rekoop/Time Cloud/Silverlight EOS</label>
</RecordType>