Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Relationships_Success.recordType-meta.xml
<RecordType>
    <fullName>Relationships_Success</fullName>
    <active>true</active>
    <label>Relationships Success</label>
</RecordType>