Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Sanctions_List_Service_Issue.recordType-meta.xml
<RecordType>
    <fullName>Sanctions_List_Service_Issue</fullName>
    <active>true</active>
    <label>Sanctions List Service Issue</label>
</RecordType>