Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Terms_Success.recordType-meta.xml
<RecordType>
    <fullName>Terms_Success</fullName>
    <active>true</active>
    <label>Terms Success</label>
</RecordType>