Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Time_8_Reference_Program.recordType-meta.xml
<RecordType>
    <fullName>Time_8_Reference_Program</fullName>
    <active>true</active>
    <label>Time 8 Reference Program</label>
</RecordType>