Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Time_8_SWAT.recordType-meta.xml
<RecordType>
    <fullName>Time_8_SWAT</fullName>
    <active>true</active>
    <label>Time 8 SWAT</label>
</RecordType>