Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Time_FMS_Migration.recordType-meta.xml
<RecordType>
    <fullName>Time_FMS_Migration</fullName>
    <active>true</active>
    <label>Time / FMS Migration</label>
</RecordType>