Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Time_Mobile_TLS_Program.recordType-meta.xml
<RecordType>
    <fullName>Time_Mobile_TLS_Program</fullName>
    <active>true</active>
    <label>Time Mobile TLS Program</label>
</RecordType>