Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Time_Web_Vulnerability.recordType-meta.xml
<RecordType>
    <fullName>Time_Web_Vulnerability</fullName>
    <active>true</active>
    <label>Time Web Vulnerability</label>
</RecordType>