Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Walls_Compound_Document_Issue.recordType-meta.xml
<RecordType>
    <fullName>Walls_Compound_Document_Issue</fullName>
    <active>true</active>
    <label>Walls Compound Document Issue</label>
</RecordType>