Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Walls_Defense.recordType-meta.xml
<RecordType>
    <fullName>Walls_Defense</fullName>
    <active>true</active>
    <label>Walls Defense</label>
</RecordType>