Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/recordTypes/Watch_List_Issue.recordType-meta.xml
<RecordType>
    <fullName>Watch_List_Issue</fullName>
    <active>true</active>
    <label>Watch List Issue</label>
</RecordType>