Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Executive_Owner__c</columns>
    <columns>TFG_Relationship_Manager__c</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Status__c</columns>
    <columns>PMP_Stage__c</columns>
    <columns>Implementation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>