Doc/force-app/main/default/objects/Product_Migration_Placeholder__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Executive_Owner__c</columns>
    <columns>TFG_Relationship_Manager__c</columns>
    <columns>Product__c</columns>
    <columns>End_Date_Expected__c</columns>
    <columns>Customer_Status__c</columns>
    <columns>PMP_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Flow</value>
    </filters>
    <label>Flow Projects</label>
</ListView>